# agents-connector

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  dist-workspace.toml
.github/workflows/: ci.yml
docs/: integration-notes.md
docs/superpowers/plans/: 2026-05-09-agents-connector-v1.md  2026-05-09-agents-connector-v2.md  2026-05-10-agents-connector-v3.md
src/: cli.rs  ipc.rs  lib.rs  main.rs  paths.rs  tmux.rs
src/adapters/: claude.rs  codex.rs  gemini.rs  mod.rs
src/broker/: handlers.rs  mod.rs  server.rs  store.rs  wake.rs
src/hook/: mod.rs
src/shim/: mod.rs
src/subcommands/: add.rs  attach.rs  delete.rs  launch.rs  list.rs  mod.rs  remove.rs  restart.rs  resume.rs  start.rs  stop.rs  tail.rs
test_dir/: fibonacci.py
tests/: broker_ipc_test.rs  codex_adapter_test.rs  e2e_test.rs  gemini_adapter_test.rs  store_test.rs  wake_test.rs
