[package]
name = "agents-connector"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Multi-agent CLI communication substrate — connect Claude Code, Codex, and Gemini CLI agents in a shared tmux session"
repository = "https://github.com/Aldenysq/agents-connector"
homepage = "https://github.com/Aldenysq/agents-connector"
readme = "README.md"
keywords = ["mcp", "agents", "tmux", "claude", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
directories = "5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
nix = { version = "0.27", features = ["signal"] }
# rmcp version: latest stable is 1.6.0 as of 2026-05-09 (Task 0 noted 0.1 placeholder)
# Default features cover `macros` + `server`; we additionally need `transport-io` for stdio.
rmcp = { version = "1", features = ["transport-io"] }
schemars = "1"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
predicates = "3"
serial_test = "3"

[lib]
name = "agents_connector"
path = "src/lib.rs"

[[bin]]
name = "agents-connector"
path = "src/main.rs"
